--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
     "@prismicio/react": "^2.3.0",
     "gatsby": "^4.3.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^2.3.0",
+    "gatsby-plugin-image": "^2.14.1",
     "gatsby-plugin-manifest": "^4.3.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-source-prismic": "^5.2.6",
     "prismic-reactjs": "^1.3.3",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.6.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
+    "react-modal": "^3.15.1",
+    "react-multi-carousel": "^2.8.0",
     "stream": "^0.0.2",
     "styled-components": "^5.3.5"
   },
@@ -29,5 +33,8 @@
   "devDependencies": {
     "eslint": "^8.3.0",
     "prettier": "^2.5.0"
+  },
+  "overrides": {
+    "glob": "7.2.0"
   }
 }
