--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "dependencies": {
     "@prismicio/react": "^2.3.0",
     "gatsby": "^4.3.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.14.1",
     "gatsby-plugin-manifest": "^4.3.0",
     "gatsby-plugin-react-helmet": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.14.1",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-source-prismic": "^5.2.6",
+    "gatsby-transformer-sharp": "^4.14.0",
     "prismic-reactjs": "^1.3.3",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.6.1",
