--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
+    "react-loading-spin": "^2.1.9",
     "react-modal": "^3.15.1",
     "react-multi-carousel": "^2.8.0",
     "stream": "^0.0.2",
