--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ทองเฮง",
+  "name": "Thong Heng",
   "description": "ทองเฮง บริการฝากถอน อัตโนมัติ สมัครง่าย มีโบนัสให้ตลอด แทงหวยออนไลน์ หวยรัฐ หวยไทยลอตโต้ หวยหุ้น หวยหุ้นต่างประเทศ หวนยี่กี(5นาที)มีมากกว่า200รอบต่อวัน แท่งสะสมรับเครดิตฟรี ยิ่งชวนเพื่อนมาเล่นเยอะยิ่งรับโบนัส8%ฟรีๆ",
   "dependencies": {
     "@prismicio/react": "^2.3.0",
